correcting ipynb file

--- a/Python_Code/Generating_Fake_Data_in_Python.ipynb
+++ b/Python_Code/Generating_Fake_Data_in_Python.ipynb
@@ -277,15 +277,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# query_users = \"INSERT INTO users (user_handle, first_name, last_name, email_address, phone_number, birthday) VALUES \" + str(user_data)[1:-1] + \"; \\n\\n\"\n",
-    "# query_followers = \"INSERT INTO followers (follower_id, following_id) VALUES \" + str(followers_data)[1:-1] + \"; \\n\"\n",
-    "# query_tweets = \"INSERT INTO tweets (user_id, tweet_text) VALUES \" + str(tweets)[1:-1] + \"; \\n\\n\"\n",
-    "# query_base_comments = \"INSERT INTO comments (op_tweet_id, commenter_id, comment_text) VALUES \" + str(base_comments)[1:-1] + \"; \\n\\n\"\n",
-    "# query_sub_comments = \"INSERT INTO comments (parent_comment_id, op_tweet_id, commenter_id, comment_text) VALUES \" + str(sub_comments)[1:-1] + \"; \\n\\n\"\n",
-    "# query_retweets = \"INSERT INTO retweets (op_tweet_id, retweeter_id) VALUES \" + str(retweets)[1:-1] + \"; \\n\\n\"\n",
-    "# query_retweeted_comments = \"INSERT INTO retweets (op_tweet_id, comment_id, retweeter_id) VALUES \" + str(retweeted_comments)[1:-1] + \"; \\n\\n\"\n",
-    "# query_hashtag_instances = \"INSERT INTO hashtag_instances (hashtag_id, tweet_id) VALUES \" + str(hashtag_instances)[1:-1] + \"; \\n\\n\"\n",
-    "# query_tweet_likes = \"INSERT INTO tweet_likes (user_id, tweet_id) VALUES \" + str(tweet_likes)[1:-1] + \"; \\n\\n\"\n",
+    "query_users = \"INSERT INTO users (user_handle, first_name, last_name, email_address, phone_number, birthday) VALUES \" + str(user_data)[1:-1] + \"; \\n\\n\"\n",
+    "query_followers = \"INSERT INTO followers (follower_id, following_id) VALUES \" + str(followers_data)[1:-1] + \"; \\n\"\n",
+    "query_tweets = \"INSERT INTO tweets (user_id, tweet_text) VALUES \" + str(tweets)[1:-1] + \"; \\n\\n\"\n",
+    "query_base_comments = \"INSERT INTO comments (op_tweet_id, commenter_id, comment_text) VALUES \" + str(base_comments)[1:-1] + \"; \\n\\n\"\n",
+    "query_sub_comments = \"INSERT INTO comments (parent_comment_id, op_tweet_id, commenter_id, comment_text) VALUES \" + str(sub_comments)[1:-1] + \"; \\n\\n\"\n",
+    "query_retweets = \"INSERT INTO retweets (op_tweet_id, retweeter_id) VALUES \" + str(retweets)[1:-1] + \"; \\n\\n\"\n",
+    "query_retweeted_comments = \"INSERT INTO retweets (op_tweet_id, comment_id, retweeter_id) VALUES \" + str(retweeted_comments)[1:-1] + \"; \\n\\n\"\n",
+    "query_hashtag_instances = \"INSERT INTO hashtag_instances (hashtag_id, tweet_id) VALUES \" + str(hashtag_instances)[1:-1] + \"; \\n\\n\"\n",
+    "query_tweet_likes = \"INSERT INTO tweet_likes (user_id, tweet_id) VALUES \" + str(tweet_likes)[1:-1] + \"; \\n\\n\"\n",
     "query_comment_likes = \"INSERT INTO comment_likes (comment_id, commenter_id) VALUES \" + str(comment_likes)[1:-1] + \"; \\n\\n\"\n",
     "\n",
     "total_query = query_users + query_followers + query_tweets + query_base_comments + query_sub_comments + query_retweets + query_retweeted_comments + query_hashtag_list + query_hashtag_instances + query_tweet_likes + query_comment_likes"
